<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/layout_bk"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="@string/oneInt"
            android:text="@string/oneway_button_text"
            android:id="@+id/oneway_button"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/oneway_inactive_button"
            android:textColor="@color/lightBlue" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="@string/oneInt"
            android:text="@string/roundtrip_button_text"
            android:id="@+id/roundtrip_button"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/roundtrip_active_button"
            android:textColor="@color/white"
            android:typeface="sans" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">
            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@string/oneInt"
                android:id="@+id/departure_spinner"
                android:layout_gravity="left"
                android:layout_marginLeft="6dp"/>

            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@string/oneInt"
                android:id="@+id/arrival_spinner"
                android:layout_gravity="right"
                android:layout_marginRight="6dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="@string/oneInt"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:background="@drawable/layout_bk"
            android:id="@+id/departureLayer">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/departureTextString"
                android:textColor="@color/darkBrown"
                android:layout_marginTop="8dp"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/departureDayValue"
                android:textSize="40sp"
                android:textStyle="bold"
                android:layout_alignLeft="@+id/textView"
                android:layout_alignStart="@+id/textView"
                android:textColor="@color/white"
                android:gravity="center" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/departureMonthAndYear"
                android:textColor="@color/white"
                android:layout_marginBottom="8dp"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:id="@+id/hideDepartureTime"
                android:visibility="invisible"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="@string/oneInt"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:background="@drawable/layout_bk">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/returnTextString"
                android:textColor="@color/darkBrown"
                android:layout_marginTop="8dp"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/returnDayValue"
                android:textSize="40sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/returnMonthAndYear"
                android:textColor="@color/white"
                android:layout_marginBottom="8dp" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:id="@+id/hideReturnTime"
                android:visibility="invisible"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:layout_marginTop="15dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="@string/oneInt"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:background="@drawable/passenger_bk">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adults"
                android:textColor="@color/darkBrown"
                android:layout_marginTop="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/adultsNumber"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/darkBrown"
                android:gravity="center"
                android:text="@string/oneInt" />
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:padding="3dp">
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@string/oneInt"
                    android:id="@+id/adultIncrementBtn"
                    android:background="@drawable/increase_button"
                    android:layout_gravity="center_horizontal"
                    android:textSize="25sp"
                    android:text="@string/increaseBtnText"
                    android:textColor="@color/white"
                    android:layout_marginRight="1dp"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@string/oneInt"
                    android:id="@+id/adultDecreaseBtn"
                    android:background="@drawable/decrease_button"
                    android:layout_gravity="center_horizontal"
                    android:textSize="25sp"
                    android:text="@string/decreaseBtnText"
                    android:textColor="@color/white"
                    android:layout_marginLeft="1dp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="@string/oneInt"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:background="@drawable/passenger_bk">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/childs"
                android:textColor="@color/darkBrown"
                android:layout_marginTop="8dp" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/childsNumber"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/darkBrown"
                android:text="@string/zeroInt"
                android:gravity="center"/>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:padding="3dp">
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@string/oneInt"
                    android:id="@+id/childIncrementBtn"
                    android:background="@drawable/increase_button"
                    android:layout_gravity="center_horizontal"
                    android:textSize="25sp"
                    android:text="@string/increaseBtnText"
                    android:textColor="@color/white"
                    android:layout_marginRight="1dp"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@string/oneInt"
                    android:id="@+id/childDecreaseBtn"
                    android:background="@drawable/decrease_button"
                    android:layout_gravity="center_horizontal"
                    android:textSize="25sp"
                    android:text="@string/decreaseBtnText"
                    android:textColor="@color/white"
                    android:layout_marginLeft="1dp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="@string/oneInt"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:background="@drawable/passenger_bk">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/infants"
                android:textColor="@color/darkBrown"
                android:layout_marginTop="8dp"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/infantsNumber"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/darkBrown"
                android:text="@string/zeroInt"
                android:gravity="center"/>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:padding="3dp">
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@string/oneInt"
                    android:id="@+id/infantIncrementBtn"
                    android:background="@drawable/increase_button"
                    android:layout_gravity="center_horizontal"
                    android:textSize="25sp"
                    android:text="@string/increaseBtnText"
                    android:textColor="@color/white"
                    android:layout_marginRight="1dp"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@string/oneInt"
                    android:id="@+id/infantDecreaseBtn"
                    android:background="@drawable/decrease_button"
                    android:layout_gravity="center_horizontal"
                    android:textSize="25sp"
                    android:text="@string/decreaseBtnText"
                    android:textColor="@color/white"
                    android:layout_marginLeft="1dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dip">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_button"
            android:id="@+id/searchButton"
            android:layout_gravity="center_horizontal"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:background="@drawable/search_button"/>
    </LinearLayout>

</LinearLayout>